--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-     我已经到了 <a href='http://suoleng.cc'>新家</a>
+     <div align='center'>我已经到了 <a href='http://suoleng.cc'>新家</a></div>
 
   
   </body>
